# src/controllers/auth.controller.js
@@ -7,6 +7,11 @@ const jwt = require('jsonwebtoken')
 class AuthController {
     async login(req, res, next) {
         // #swagger.tags = ['Auth']
+        // #swagger.description = 'Login'
+        /* #swagger.parameters['body'] = {
+               in: 'body',
+               schema: { $ref: '#/definitions/Login' }
+        } */
         const loginDto = new LoginDto(req.body);
         const { refreshToken, accessToken, user } = await userService.login(loginDto);
 
@@ -19,6 +24,11 @@ class AuthController {
 
     async register(req, res, next) {
         // #swagger.tags = ['Auth']
+        // #swagger.description = 'Register'
+        /* #swagger.parameters['body'] = {
+               in: 'body',
+               schema: { $ref: '#/definitions/Register' }
+        } */
         const registerDto = new RegisterDto(req.body);
         const { refreshToken, accessToken, user } = await userService.registration(registerDto);
 
@@ -31,6 +41,7 @@ class AuthController {
 
     async logout(req, res, next) {
         // #swagger.tags = ['Auth']
+        // #swagger.description = 'Logout'
         const userId = req.user?.id;
         const result = await userService.logout(userId);
 
@@ -41,6 +52,7 @@ class AuthController {
 
     async refreshTokens(req, res, next) {
         // #swagger.tags = ['Auth']
+        // #swagger.description = 'Refresh tokens'
         const refreshToken = req.cookies['jwt-refresh-token'];
         const tokens = await userService.refresh(refreshToken);
         return res.cookie('jwt-access-token', tokens.accessToken, {
